--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,8 +1,10 @@
-%h2 タスク一覧画面
-- if flash[:success]
-  .flash.success-message
-    = flash[:success]
+.header
+  = render "layouts/task/header"
+
 %table
+  %tr
+    %td.add{:colspan => '8', :align => 'right'}
+      = link_to "新規作成", new_task_path
   %tr
     %th ID
     %th name
@@ -14,24 +16,21 @@
     %th menu
   - @tasks.each do |task|
     %tr
-      %td
+      %td.row
         = task.id
-      %td
+      %td.row
         = task.name
-      %td
+      %td.row
         = task.description
-      %td
+      %td.row
         = task.status
-      %td
+      %td.row
         = task.priority
-      %td
+      %td.row
         = task.started_at
-      %td
+      %td.row
         = task.ended_at
-      %td.menu
+      %td.row.menu
         = link_to "詳細", task_path(task)
         ／#{link_to "編集", edit_task_path(task)}
-        ／#{link_to "削除", task, method: :delete , data: { confirm: 'タスクを削除します。よろしいですか?' }}
-%hr/
-%div
-  = link_to "新規作成", new_task_path
+        ／#{link_to "削除", task, method: :delete , data: { confirm: 'Are you sure' }}
