--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,26 +1,8 @@
-%h2 新規作成画面
-%hr/
-= form_for :task, url: tasks_path do |f|
-  %table
-    %tr
-      %td.title 課題名
-      %td= f.text_field :name, placeholder: '課題名を登録'
-    %tr
-      %td.title 説明
-      %td= f.text_area :description, placeholder: '説明'
-    %tr
-      %td.title ステータス
-      %td
-        = select :task, :status, [['未着手', "created"], ['着手', "doing"], ['完了', "done"]]
-    %tr
-      %td.title 優先度
-      %td= select :task, :priority, [['高', "high"], ['中', "middle"], ['低', "low"]]
-    %tr
-      %td.title 開始日
-      %td= date_field(:task, :started_at)
-    %tr
-      %td.title 終了日
-      %td= date_field(:task, :ended_at)
-  = f.submit
-%hr/
-= link_to "一覧へ", tasks_path
+.header
+  = render "layouts/task/header"
+
+.form
+  = render "tasks/form"
+
+.footer
+  = render "layouts/task/footer"
