--- a/app/assets/stylesheets/tasks.sass
+++ b/app/assets/stylesheets/tasks.sass
@@ -1,7 +1,7 @@
 // Place all the styles related to the Tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-div.header
+header
   margin: 0 auto
   width: 880px
 
@@ -10,34 +10,38 @@ h2
 
 table
   margin: 0 auto
-  border-collapse: separate
-  border-spacing: 1px 10px
   font-size: 12px
+  border:
+    collapse: separate
+    spacing: 1px 10px
   th
-      background: #295890
-      color: #ffffff
-      vertical-align: middle
-      width: 80px
-      overflow: visible
-      position: relative
-      font-weight: normal
-      font-size: 15px
-  td.row
-    background: #efefef
-  td.menu
-      width: 110px
-      padding: 10px
-  td.title
     background: #295890
     color: #ffffff
-    padding-right: 10px
-    padding-left: 10px
-    width: 85px
-  td.add
-    background: #ffffff
-  td.input_disabled
-    background: #efefef
-    width: 400px
+    vertical-align: middle
+    width: 80px
+    overflow: visible
+    position: relative
+    font:
+      weight: normal
+      size: 15px
+  td
+    &.row
+      background: #efefef
+    &.menu
+      width: 110px
+      padding: 10px
+    &.title
+      background: #295890
+      color: #ffffff
+      width: 85px
+      padding:
+        right: 10px
+        left: 10px
+    &.add
+      background: #ffffff
+    &.input_disabled
+      background: #efefef
+      width: 400px
 
 input
   width: 400px
@@ -50,23 +54,25 @@ select
   width: 180px
   text-align: right
 
-div
-  .flash
-    border-radius: 20px
-    margin: 30px
-  .success-message
-    background: #3b7fed
-    color: #ffffff
-    padding-left: 15px
-    padding-top: 5px
-    padding-bottom: 5px
+.flash
+  border-radius: 20px
+  margin: 30px
 
-div.footer
+.success-message
+  background: #3b7fed
+  color: #ffffff
+  padding:
+    left: 15px
+    top: 5px
+    bottom: 5px
+
+footer
   margin: 0 auto
-  width: 800px
+  width: 880px
   font-size: 12px
   text-align: right
 
 hr
-  border-width: 0.5px
-  border-color: #295890
+  border:
+    width: 0.5px
+    color: #295890
