--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,10 +1,9 @@
-.header
-  = render "layouts/task/header"
+= render 'layouts/task/header'
 
 %table
   %tr
-    %td.add{:colspan => '8', :align => 'right'}
-      = link_to "新規作成", new_task_path
+    %td.add{ colspan: 8, align: 'right' }
+      = link_to '新規作成', new_task_path
   %tr
     %th ID
     %th name
@@ -31,6 +30,8 @@
       %td.row
         = task.ended_at
       %td.row.menu
-        = link_to "詳細", task_path(task)
-        ／#{link_to "編集", edit_task_path(task)}
-        ／#{link_to "削除", task, method: :delete , data: { confirm: 'Are you sure' }}
+        = link_to '詳細', task_path(task)
+        ／#{link_to '編集', edit_task_path(task)}
+        ／#{link_to '削除', task, method: :delete , data: { confirm: 'Are you sure' }}
+
+= render 'layouts/task/footer'
