--- a/app/views/layouts/task/_footer.html.haml
+++ b/app/views/layouts/task/_footer.html.haml
@@ -1,10 +1,10 @@
 %footer
   %hr
 
-  = link_to '一覧へ', tasks_path
+  = link_to t(:link_to_index), tasks_path
 
   - if params[:action] == 'show'
-    ／#{link_to '編集', edit_task_path(task)}
+    ／#{link_to t(:link_to_edit), edit_task_path(task)}
 
   - if params[:action] == 'show' || params[:action] == 'edit'
-    ／#{link_to '削除', task, method: :delete , data: { confirm: 'Are you sure?' }}
+    ／#{link_to t(:link_to_delete), task, method: :delete , data: { confirm: 'Are you sure?' }}
