--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -3,7 +3,7 @@
 %table#index
   %tr
     %td.add{ colspan: 8, align: 'right' }
-      = link_to '新規作成', new_task_path
+      = link_to t(:link_to_new), new_task_path
   %tr
     %th ID
     %th name
@@ -30,8 +30,8 @@
       %td
         = task.ended_at
       %td.menu
-        = link_to '詳細', task_path(task)
-        ／#{link_to '編集', edit_task_path(task)}
-        ／#{link_to '削除', task, method: :delete , data: { confirm: 'Are you sure' }}
+        = link_to t(:link_to_show), task_path(task)
+        ／#{link_to t(:link_to_edit), edit_task_path(task)}
+        ／#{link_to t(:link_to_delete), task, method: :delete , data: { confirm: 'Are you sure' }}
 
 = render 'layouts/task/footer'
