--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -5,14 +5,22 @@
     %td.add{ colspan: 8, align: 'right' }
       = link_to t(:link_to_new), new_task_path
   %tr
-    %th ID
-    %th name
-    %th description
-    %th status
-    %th priority
-    %th started_at
-    %th ended_at
-    %th menu
+    %th
+      = Task.human_attribute_name :id
+    %th
+      = Task.human_attribute_name :name
+    %th
+      = Task.human_attribute_name :description
+    %th
+      = Task.human_attribute_name :status
+    %th
+      = Task.human_attribute_name :priority
+    %th
+      = Task.human_attribute_name :started_at
+    %th
+      = Task.human_attribute_name :ended_at
+    %th
+      = Task.human_attribute_name :menu
   - @tasks.each do |task|
     %tr
       %td
@@ -32,6 +40,6 @@
       %td.menu
         = link_to t(:link_to_show), task_path(task)
         ／#{link_to t(:link_to_edit), edit_task_path(task)}
-        ／#{link_to t(:link_to_delete), task, method: :delete , data: { confirm: 'Are you sure' }}
+        ／#{link_to t(:link_to_delete), task, method: :delete , data: { confirm: t('confirm.delete') }}
 
 = render 'layouts/task/footer'
