--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -39,7 +39,9 @@
         = task.ended_at
       %td.menu
         = link_to t(:link_to_show), task_path(task)
-        ／#{link_to t(:link_to_edit), edit_task_path(task)}
-        ／#{link_to t(:link_to_delete), task, method: :delete , data: { confirm: t('confirm.delete', target: Task.model_name.human) }}
+        ／
+        = link_to t(:link_to_edit), edit_task_path(task)
+        ／
+        = link_to t(:link_to_delete), task, method: :delete , data: { confirm: t('confirm.delete', target: Task.model_name.human) }
 
 = render 'layouts/task/footer'
