タイムゾーンを設定

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -34,7 +34,7 @@
       %td
         = task.priority
       %td
-        = task.started_at
+        = task.started_at.to_s()
       %td
         = task.ended_at
       %td.menu
