--- a/app/views/layouts/task/_footer.html.haml
+++ b/app/views/layouts/task/_footer.html.haml
@@ -3,6 +3,10 @@
 
   = link_to t(:link_to_index), tasks_path
 
+  - if params[:action] == 'index'
+    ／
+    = link_to t(:link_to_new), new_task_path
+
   - if params[:action] == 'show'
     ／
     = link_to t(:link_to_edit), edit_task_path(task)
