とりま「タスク名」の入力必須だけやってみました

--- a/app/assets/stylesheets/tasks.sass
+++ b/app/assets/stylesheets/tasks.sass
@@ -4,6 +4,7 @@
 $white: #ffffff
 $blue: #295890
 $purple: #eeefff
+$red: #ff0000
 
 header
   margin: 0 auto
@@ -11,6 +12,25 @@ header
 
 h2
   color: $blue
+
+.errors
+  margin: 0 auto
+  padding:
+    left: 20px
+    right: 20px
+  width: 530px
+  color: $red
+  h3
+    padding-left: 10px
+    margin-bottom: 0px
+    background: $red
+    color: $white
+  .messages
+    border:
+      top: 1px solid $red
+      left: 1px solid $red
+      right: 1px solid $red
+      bottom: 1px solid $red
 
 table
   margin: 0 auto
