--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -21,10 +21,10 @@
     %tr
       %th= f.label :status
       %td
-        = f.select :status, [[t('task.status.created'), 'created'], [t('task.status.doing'), 'doing'], [t('task.status.done'), 'done']]
+        = f.select :status, [[], [t('task.status.created'), 'created'], [t('task.status.doing'), 'doing'], [t('task.status.done'), 'done']]
     %tr
       %th= f.label :priority
-      %td= f.select :priority, [[t('task.priority.high'), 'high'], [t('task.priority.middle'), 'middle'], [t('task.priority.low'), 'low']]
+      %td= f.select :priority, [[], [t('task.priority.high'), 'high'], [t('task.priority.middle'), 'middle'], [t('task.priority.low'), 'low']]
     %tr
       %th= f.label :started_on
       %td= f.date_field(:started_on)
