sortを処理を追加

--- a/app/assets/stylesheets/tasks.sass
+++ b/app/assets/stylesheets/tasks.sass
@@ -50,6 +50,10 @@ table
     background: $purple
 
   &#index
+    th
+        a
+          color: $white
+          text-decoration: none
     td
       &.menu
         width: 115px
