--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -16,7 +16,9 @@
     %th
       = Task.human_attribute_name :started_on
     %th
-      = Task.human_attribute_name :ended_on
+      = sort('ended_on')
+    %th
+      = sort('created_at')
     %th
       = Task.human_attribute_name :action
   - @tasks.each do |task|
@@ -35,6 +37,8 @@
         = task.started_on
       %td
         = task.ended_on
+      %td
+        = task.created_at
       %td.menu
         = link_to t(:link_to_show), task_path(task)
         ／
