--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,14 +1,14 @@
 = render 'layouts/task/header', page_title: @page_title
 
-%search
-= search_form_for @q do |f|
-  = f.label Task.human_attribute_name :name
-  = f.search_field :name_cont
-  = f.label Task.human_attribute_name :status
-  = f.select :status_eq,
-    Task.statuses.map { |k, v| [t("task.status.#{k}"), v] },
-    include_blank: t('select.default')
-  = f.submit t('submit.search')
+#search
+  = search_form_for @q do |f|
+    = f.label Task.human_attribute_name :name
+    = f.search_field :name_cont
+    = f.label Task.human_attribute_name :status
+    = f.select :status_eq,
+      Task.statuses.map { |k, v| [t("task.status.#{k}"), v] },
+      include_blank: t('select.default')
+    = f.submit t('submit.search')
 
 %table#index
   %tr
