--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -4,6 +4,10 @@
   = search_form_for @q do |f|
     = f.label Task.human_attribute_name :name
     = f.search_field :name_cont
+    = f.label Task.human_attribute_name :priority
+    = f.select :priority_eq,
+      Task.priorities.map { |k, v| [t("task.priority.#{k}"), v] },
+      include_blank: t('select.default')
     = f.label Task.human_attribute_name :status
     = f.select :status_eq,
       Task.statuses.map { |k, v| [t("task.status.#{k}"), v] },
@@ -21,7 +25,7 @@
     %th
       = Task.human_attribute_name :status
     %th
-      = Task.human_attribute_name :priority
+      = sort_link @q, :priority, Task.human_attribute_name(:priority)
     %th
       = Task.human_attribute_name :started_on
     %th
