--- a/app/assets/stylesheets/tasks.sass
+++ b/app/assets/stylesheets/tasks.sass
@@ -32,6 +32,11 @@ h2
       right: 1px solid $red
       bottom: 1px solid $red
 
+div
+  width: 860px
+  margin: 0 auto
+  &#pager
+    text-align: right
 table
   margin: 0 auto
   font-size: 12px
