--- a/app/assets/stylesheets/tasks.sass
+++ b/app/assets/stylesheets/tasks.sass
@@ -37,6 +37,14 @@ div
   margin: 0 auto
   &.search
     margin: 0 auto
+  &.container
+    margin: 0 auto
+    .column
+      background: $blue
+      color: $white
+      vertical-align: middle
+      font-size: 16px
+      width: 80px      
   &.pager
     margin: 5 auto
 
