--- a/app/views/kaminari/_prev_page.html.haml
+++ b/app/views/kaminari/_prev_page.html.haml
@@ -5,9 +5,12 @@
 -#    total_pages:   total number of pages
 -#    per_page:      number of items to fetch per page
 -#    remote:        data-remote
-%li.page-item.prev{ class: "#{'disabled' if current_page.first?}" }
-  = link_to (current_page.first? ? "#" : url), class: "page-link", "aria-label" => "Previous", :remote => remote do
-    %span{"aria-hidden" => "true"}
+%li.page-item.prev{ class: "#{ 'disabled' if current_page.first? }" }
+  = link_to (current_page.first? ? "#" : url),
+    { class: "page-link" },
+    "aria-label" => "Previous",
+    :remote => remote do
+    %span{ "aria-hidden" => "true" }
       = t('pagination.previous').html_safe
     %span.sr-only
       = t('pagination.previous').html_safe
