--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,73 +1,70 @@
 = render 'layouts/task/header', page_title: @page_title
 
-#search
-  = search_form_for @q do |f|
-    .form-row
-      .form-group.col-md-6
-        = f.label Task.human_attribute_name :name
-        = f.search_field :name_cont, { class: 'form-control' }
-      .form-group.col-md-3
-        = f.label Task.human_attribute_name :priority,
-          { class: 'control-label' }
-        = f.select :status_eq,
-          Task.statuses.map { |k, v| [t("task.status.#{k}"), v] },
-          { include_blank: t('select.default') },
-          { class: 'form-control' }
-      .form-group.col-md-3
-        = f.label Task.human_attribute_name :status, { class: 'control-label' }
-        = f.select :priority_eq,
-          Task.priorities.map { |k, v| [t("task.priority.#{k}"), v] },
-          { include_blank: t('select.default') },
-          { class: 'form-control' }
-    .form-row
-      .form-group.col-md-11
-      .form-group.col-md-1
-        = f.submit t('submit.search'), { class: 'btn btn-primary' }
+.container
+  #search
+    = search_form_for @q do |f|
+      .form-row
+        .form-group.col-md-6
+          = f.label Task.human_attribute_name :name
+          = f.search_field :name_cont, { class: 'form-control' }
+        .form-group.col-md-3
+          = f.label Task.human_attribute_name :priority,
+            { class: 'control-label' }
+          = f.select :status_eq,
+            Task.statuses.map { |k, v| [t("task.status.#{k}"), v] },
+            { include_blank: t('select.default') },
+            { class: 'form-control' }
+        .form-group.col-md-3
+          = f.label Task.human_attribute_name :status, { class: 'control-label' }
+          = f.select :priority_eq,
+            Task.priorities.map { |k, v| [t("task.priority.#{k}"), v] },
+            { include_blank: t('select.default') },
+            { class: 'form-control' }
+      .form-row
+        .form-group.col-md-11
+        .form-group.col-md-1
+          = f.submit t('submit.search'), { class: 'btn btn-primary' }
 
-%table#index.table.table-striped
-  %tr
-    %th
-      = Task.human_attribute_name :id
-    %th
-      = Task.human_attribute_name :name
-    %th
-      = Task.human_attribute_name :description
-    %th
-      = Task.human_attribute_name :status
-    %th
-      = sort_link @q, :priority, Task.human_attribute_name(:priority)
-    %th
-      = Task.human_attribute_name :started_on
-    %th
-      = sort_link @q, :ended_on, Task.human_attribute_name(:ended_on)
-    %th
-      = sort_link @q, :created_at, Task.human_attribute_name(:created_at)
-    %th
-      = Task.human_attribute_name :action
-  - @tasks.each do |task|
+  %table#index.table.table-striped
     %tr
-      %td
-        = task.id
-      %td
-        = task.name
-      %td
-        = task.description
-      %td
-        = t("task.status.#{task.status}")
-      %td
-        = t("task.priority.#{task.priority}")
-      %td
-        = task.started_on
-      %td
-        = task.ended_on
-      %td
-        = task.created_at
-      %td.menu
-        = link_to t(:link_to_show), task_path(task)
-        ／
-        = link_to t(:link_to_edit), edit_task_path(task)
-        ／
-        = link_to t(:link_to_delete), task, method: :delete , data: { confirm: t('confirm.delete', target: Task.model_name.human) }
+      %th
+        = Task.human_attribute_name :id
+      %th
+        = Task.human_attribute_name :name
+      %th
+        = Task.human_attribute_name :status
+      %th
+        = sort_link @q, :priority, Task.human_attribute_name(:priority)
+      %th
+        = Task.human_attribute_name :started_on
+      %th
+        = sort_link @q, :ended_on, Task.human_attribute_name(:ended_on)
+      %th
+        = sort_link @q, :created_at, Task.human_attribute_name(:created_at)
+      %th
+        = Task.human_attribute_name :action
+    - @tasks.each do |task|
+      %tr
+        %td
+          = task.id
+        %td
+          = task.name
+        %td
+          = t("task.status.#{task.status}")
+        %td
+          = t("task.priority.#{task.priority}")
+        %td
+          = task.started_on
+        %td
+          = task.ended_on
+        %td
+          = task.created_at
+        %td.menu
+          = link_to t(:link_to_show), task_path(task)
+          ／
+          = link_to t(:link_to_edit), edit_task_path(task)
+          ／
+          = link_to t(:link_to_delete), task, method: :delete , data: { confirm: t('confirm.delete', target: Task.model_name.human) }
 
 .pager
   = paginate @tasks
