--- a/app/views/kaminari/_first_page.html.haml
+++ b/app/views/kaminari/_first_page.html.haml
@@ -8,8 +8,7 @@
 %li.page-item.prev{ class: "#{ 'disabled' if current_page.first? }" }
   = link_to (current_page.first? ? "#" : url),
     { class: "page-link" },
-    "aria-label" => "First",
-    :remote => remote do
+    { "aria-label" => "First", remote: remote } do
     %span{ "aria-hidden" => "true" }
       = t('pagination.first')
     %span.sr-only
