--- a/app/views/kaminari/_next_page.html.haml
+++ b/app/views/kaminari/_next_page.html.haml
@@ -8,9 +8,8 @@
 %li.page-item.next{ class: "#{ 'disabled' if current_page.last? }" }
   = link_to (current_page.last? ? "#" : url),
     { class: "page-link" },
-    "aria-label" => "Next",
-    :remote => remote do
-    %span{"aria-hidden" => "true"}
+    { "aria-label" => "Last", remote: remote } do
+    %span{ "aria-hidden" => "true" }
       = t('pagination.next')
     %span.sr-only
       = t('pagination.next').html_safe
