--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,7 @@
 = render 'layouts/header', page_title: @page_title
 
+= link_to t('submit.new'), new_user_path , class: 'btn btn-primary'
+
 %table
   %tr
     %th
@@ -16,6 +18,8 @@
       = User.human_attribute_name :updated_at
     %th
       = User.human_attribute_name :is_deleted
+    %th
+      = Task.human_attribute_name :action
   - @users.each do |user|
     %tr
       %td
@@ -32,8 +36,11 @@
         = user.updated_at
       %td
         = user.is_deleted
-
-
-
+      %td
+        = link_to t(:link_to_show), user_path(user)
+        ／
+        = link_to t(:link_to_edit), edit_user_path(user)
+        ／
+        = link_to t(:link_to_delete), user, method: :delete , data: { confirm: t('confirm.delete', target: User.model_name.human) }
 
 = render 'layouts/footer'
