--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,20 +1,7 @@
 %footer
-  %hr
-  = Task.model_name.human
-  = link_to t(:link_to_index), tasks_path
-
-  - if params[:action] == 'index'
-    ／
-    = link_to t(:link_to_new), new_task_path
-
-  - if params[:action] == 'show'
-    ／
-    = link_to t(:link_to_edit), edit_task_path(task)
-
-  - if params[:action] == 'show' || params[:action] == 'edit'
-    ／
-    = link_to t(:link_to_delete), task, method: :delete , data: { confirm: t('confirm.delete', target: Task.model_name.human) }
-
-  %p
-    = User.model_name.human
-    = link_to t(:link_to_index), users_path
+  .nav.nav-pills.nav-fill
+    %ul.nav
+      %li.nav-item
+        = link_to t('title_index', title: User.model_name.human), users_path, class: 'nav-link'
+      %li.nav-item
+        = link_to t('title_index', title: Task.model_name.human), tasks_path, class: 'nav-link'
